--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -33,3 +33,4 @@ google-cloud-storage = "==2.9.0"
 pipenv = "*"
 django-import-export = "*"
 drf-spectacular = "~=0.26.3"
+cb-zoom-info = {editable = true, path = "./modules/django_zoom_info"}
